--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -113,6 +113,12 @@
                     <section>
                         <p>
                             TravisCI!<br />
+                            <img src="img/travis_history.jpeg" alt="Y U NO LOAD">
+                        </p>
+                    </section>
+
+                    <section>
+                        <p>
                             <img src="img/travis.jpeg" alt="Y U NO LOAD">
                         </p>
                     </section>
@@ -125,19 +131,10 @@
                 </section>
 
                 <section>
-                    <section>
-                        <p>
-                            Coveralls.io support
-
-                        </p>
-                    </section>
-
-                    <section>
-                        <p>
-
-
-                        </p>
-                    </section>
+                    <p>
+                        Coveralls.io support
+                        <img src="img/coveralls.jpeg" alt="Y U NO LOAD">
+                    </p>
                 </section>
 
                 <section>
@@ -151,16 +148,46 @@
                     <section>
                         <p>
                             Composer support!
-
+                            <img src="img/composer.jpeg" alt="Y U NO LOAD">
                         </p>
                     </section>
 
                     <section>
                         <p>
                             Packagist
-
+                            <img src="img/packagist.jpeg" alt="Y U NO LOAD">
                         </p>
                     </section>
+                </section>
+
+                <section data-state="blackout">
+                    <p>
+                        Questions?<br /><br />
+
+                        <img src="img/Willnotbestopped.gif" alt="Y U NO LOAD"><br /><br />
+
+                        bit.ly/2013-smw<br /><br />
+
+                        Your ideas and support are welcome!
+                    </p>
+                </section>
+
+                <section data-state="blackout">
+                    <h3>Special:Links</h3>
+                    <ul>
+                        <li><a href="http://bit.ly/smw-2013">View slides bit.ly/smw-2013</a></li>
+                        <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
+                        <li><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></li>
+                        <li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></li>
+                    </ul>
+                </section>
+
+                <section data-state="blackout">
+                    <h3>Special:Attribution</h3>
+                    <ul>
+                        <li>Slides: CC BY-SA 3.0, Jeroen De Dauw</li>
+                        <li>Slide engine: reveal.js, Copyright (C) 2013 Hakim El Hattab</li>
+                    </ul>
                 </section>
 
 			</div>
