--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -4,10 +4,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Yearly SMW overview</title>
+		<title>reveal.js - The HTML Presentation Framework</title>
 
-        <meta name="description" content="Yearly SMW overview for SMWCon Fall 2013">
-        <meta name="author" content="Jeroen De Dauw">
+		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="author" content="Hakim El Hattab">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -36,196 +36,192 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
+            <section>
+                <h2>Yearly LolCats overview</h2>
+                <p>
+                    Caturday will not be stopped!<br />
+                    <img src="img/cat.gif" alt="Y U NO LOAD">
+                </p>
+            </section>
 
+            <section>
+                <h2>Yearly SMW overview</h2>
+                <p>
+                    Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
+                    bit.ly/2013-smw
+                </p>
+            </section>
+
+            <section>
+                <h3>Overview</h3>
+                <ul>
+                    <li>Development</li>
+                    <li>Infrastructure</li>
+                    <li>Recap: SMW 1.8</li>
+                    <li>Next up: SMW 1.9</li>
+                    <li>Roadmap</li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>Contributors</h3>
+                <p class="fragment">~20 developers, 68 total<br /></p>
+                <p class="fragment">"Large, active development team", top 10%<br /></p>
+                <p class="fragment">Maintainers: Markus Krötzsch, James Hong Kong & Jeroen</p>
+            </section>
+
+            <section>
+                <h3>Commits</h3>
+                <p>
+                    ~1000 commits
+                    <img src="img/commits.jpeg" alt="Y U NO LOAD">
+                    "Stable Y-O-Y development activity"
+                </p>
+            </section>
+
+            <section>
+                <h3>Lines of code</h3>
+                <p>
+                    41k => 58k
+                    <img src="img/loc.jpeg" alt="Y U NO LOAD">
+                    "Mature, well-established codebase"
+                </p>
+            </section>
+
+            <section data-state="blackout">
+                <h2>Infrastructure</h2>
+            </section>
+
+            <section>
                 <section>
-                    <h2>Yearly LolCats overview</h2>
+                    <h3>Continuous integration</h3>
                     <p>
-                        Caturday will not be stopped!<br />
-                        <img src="img/cat.gif" alt="Y U NO LOAD">
+                        Tests running on Jenkins<br />
+                        <img src="img/jenkins.jpeg" alt="Y U NO LOAD">
                     </p>
                 </section>
 
                 <section>
-                    <h2>Yearly SMW overview</h2>
                     <p>
-                        Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                        bit.ly/2013-smw
+                        Jenkins integration with Gerrit<br />
+                        <img src="img/gerrit.jpeg" alt="Y U NO LOAD">
+                    </p>
+                </section>
+            </section>
+
+            <section>
+                <section>
+                    <p>
+                        TravisCI!<br />
+                        <img src="img/travis_history.jpeg" alt="Y U NO LOAD">
                     </p>
                 </section>
 
                 <section>
-                    <h3>Overview</h3>
+                    <p>
+                        <img src="img/travis.jpeg" alt="Y U NO LOAD">
+                    </p>
+                </section>
+
+                <section data-background="img/travis_build.jpeg">
+                </section>
+            </section>
+
+            <section>
+                <p>
+                    Coveralls.io support
+                    <img src="img/coveralls.jpeg" alt="Y U NO LOAD">
+                </p>
+            </section>
+
+            <section>
+                <p>
+                    Status badges
+
+                </p>
+            </section>
+
+            <section>
+                <section>
+                    <p>
+                        Composer support!
+                        <img src="img/composer.jpeg" alt="Y U NO LOAD">
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        Packagist
+                        <img src="img/packagist.jpeg" alt="Y U NO LOAD">
+                    </p>
+                </section>
+            </section>
+
+            <section data-state="blackout">
+                <h2>SMW 1.8</h2>
+            </section>
+
+            <section>
+                <h3>Compatibility</h3>
+                <ul>
+                    <li>Dropped support for MW 1.16</li>
+                    <li>Added support for MW 1.19 and 1.20</li>
+                    <li class="fragment">Added support for PHP 5.4.x</li>
+                    <li class="fragment">Added support for SQLite</li>
+                </ul>
+            </section>
+
+            <section>
+                <ul>
+                    <li>SQLStore3</li>
+                    <li>Special:Ask UI improvements</li>
+                    <li>Tooltip improvements</li>
+                    <li>Ask API: sorting and continuation</li>
+                    <li>...</li>
+                </ul>
+            </section>
+
+            <section>
+                <section>
+                    <h3>Query info now stored</h3>
                     <ul>
-                        <li>Development</li>
-                        <li>Infrastructure</li>
-                        <li>Recap: SMW 1.8</li>
-                        <li>Next up: SMW 1.9</li>
-                        <li>Roadmap</li>
+                        <li>Property:Has query</li>
+                        <li>Property:Query string</li>
+                        <li>Property:Query format</li>
+                        <li>Property:Query size</li>
+                        <li>Property:Query depth</li>
                     </ul>
+                    <p class="fragment">So you can query for queries! :)</p>
                 </section>
 
                 <section>
-                    <h3>Contributors</h3>
-                    <p class="fragment">~20 developers, 68 total<br /></p>
-                    <p class="fragment">"Large, active development team", top 10%<br /></p>
-                    <p class="fragment">Maintainers: Markus Krötzsch, James Hong Kong & Jeroen</p>
-                </section>
-
-                <section>
-                    <h3>Commits</h3>
-                    <p>
-                        ~1000 commits
-                        <img src="img/commits.jpeg" alt="Y U NO LOAD">
-                        "Stable Y-O-Y development activity"
-                    </p>
-                </section>
-
-                <section>
-                    <h3>Lines of code</h3>
-                    <p>
-                        41k => 58k
-                        <img src="img/loc.jpeg" alt="Y U NO LOAD">
-                        "Mature, well-established codebase"
-                    </p>
-                </section>
-
-                <section data-state="blackout">
-                    <h2>Infrastructure</h2>
-                </section>
-
-                <section>
-                    <section>
-                        <h3>Continuous integration</h3>
-                        <p>
-                            Tests running on Jenkins<br />
-                            <img src="img/jenkins.jpeg" alt="Y U NO LOAD">
-                        </p>
-                    </section>
-
-                    <section>
-                        <p>
-                            Jenkins integration with Gerrit<br />
-                            <img src="img/gerrit.jpeg" alt="Y U NO LOAD">
-                        </p>
-                    </section>
-                </section>
-
-                <section>
-                    <section>
-                        <p>
-                            TravisCI!<br />
-                            <img src="img/travis_history.jpeg" alt="Y U NO LOAD">
-                        </p>
-                    </section>
-
-                    <section>
-                        <p>
-                            <img src="img/travis.jpeg" alt="Y U NO LOAD">
-                        </p>
-                    </section>
-
-                    <section>
-                        <p>
-                            <img src="img/travis_build.jpeg" alt="Y U NO LOAD">
-                        </p>
-                    </section>
-                </section>
-
-                <section>
-                    <p>
-                        Coveralls.io support
-                        <img src="img/coveralls.jpeg" alt="Y U NO LOAD">
-                    </p>
-                </section>
-
-                <section>
-                    <p>
-                        Status badges
-
-                    </p>
-                </section>
-
-                <section>
-                    <section>
-                        <p>
-                            Composer support!
-                            <img src="img/composer.jpeg" alt="Y U NO LOAD">
-                        </p>
-                    </section>
-
-                    <section>
-                        <p>
-                            Packagist
-                            <img src="img/packagist.jpeg" alt="Y U NO LOAD">
-                        </p>
-                    </section>
-                </section>
-
-                <section data-state="blackout">
-                    <h2>SMW 1.8</h2>
-                </section>
-
-                <section>
-                    <h3>Compatibility</h3>
-                    <ul>
-                        <li>Dropped support for MW 1.16</li>
-                        <li>Added support for MW 1.19 and 1.20</li>
-                        <li class="fragment">Added support for PHP 5.4.x</li>
-                        <li class="fragment">Added support for SQLite</li>
-                    </ul>
-                </section>
-
-                <section>
-                    <ul>
-                        <li>SQLStore3</li>
-                        <li>Special:Ask UI improvements</li>
-                        <li>Tooltip improvements</li>
-                        <li>Ask API: sorting and continuation</li>
-                        <li>...</li>
-                    </ul>
-                </section>
-
-                <section>
-                    <section>
-                        <h3>Query info now stored</h3>
-                        <ul>
-                            <li>Property:Has query</li>
-                            <li>Property:Query string</li>
-                            <li>Property:Query format</li>
-                            <li>Property:Query size</li>
-                            <li>Property:Query depth</li>
-                        </ul>
-                        <p class="fragment">So you can query for queries! :)</p>
-                    </section>
-
-                    <section>
-                        <p>The total number of queries</p>
+                    <p>The total number of queries</p>
 <pre>{{#ask:
 <span style="color:lightgreen">[[Query size::+]]</span>
 |format=count
 }}</pre>
 
-                        <p>Number of pages with queries</p>
+                    <p>Number of pages with queries</p>
 <pre>{{#ask:
 <span style="color:lightgreen">[[Has query::+]]</span>
 |format=count
 }}</pre>
 
-                        <p># queries with format=count</p>
+                    <p># queries with format=count</p>
 <pre>{{#ask:
 <span style="color:lightgreen">[[Query format::count]]</span>
 |format=count
 }}</pre>
 
-                        <p># pages with a query with size > 10</p>
+                    <p># pages with a query with size > 10</p>
 <pre>{{#ask:
 <span style="color:lightgreen">[[Has query.Query size::>10]]</span>
 |format=count
 }}</pre>
-                    </section>
+                </section>
 
-                    <section>
-                        <p>The 10 largest queries with their size and query string</p>
+                <section>
+                    <p>The 10 largest queries with their size and query string</p>
 <pre>{{#ask:
 <span style="color:lightgreen">[[Query string::+]]</span>
 |?Query size
@@ -235,50 +231,50 @@
 |limit=10</span>
 }}</pre>
 
-                        <p class="fragment">
-                            <img src="img/queryquery.jpeg" alt="Y U NO LOAD">
-                            <a href="https://semantic-mediawiki.org/wiki/Help:Querying_for_queries">semantic-mediawiki.org/wiki/Help:Querying_for_queries</a>
-                        </p>
-                    </section>
-                </section>
-
-                <section data-state="blackout">
-                    <h2>SMW 1.9</h2>
-                </section>
-
-                <section data-state="blackout">
-                    <h2>Roadmap</h2>
-                </section>
-
-                <section data-state="blackout">
-                    <p>
-                        Questions?<br /><br />
-
-                        <img src="img/Willnotbestopped.gif" alt="Y U NO LOAD"><br /><br />
-
-                        bit.ly/2013-smw<br /><br />
-
-                        Your ideas and support are welcome!
+                    <p class="fragment">
+                        <img src="img/queryquery.jpeg" alt="Y U NO LOAD">
+                        <a href="https://semantic-mediawiki.org/wiki/Help:Querying_for_queries">semantic-mediawiki.org/wiki/Help:Querying_for_queries</a>
                     </p>
                 </section>
+            </section>
 
-                <section data-state="blackout">
-                    <h3>Special:Links</h3>
-                    <ul>
-                        <li><a href="http://bit.ly/smw-2013">View slides bit.ly/smw-2013</a></li>
-                        <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
-                        <li><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></li>
-                        <li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></li>
-                    </ul>
-                </section>
+            <section data-state="blackout">
+                <h2>SMW 1.9</h2>
+            </section>
 
-                <section data-state="blackout">
-                    <h3>Special:Attribution</h3>
-                    <ul>
-                        <li>Slides: CC BY-SA 3.0, Jeroen De Dauw</li>
-                        <li>Slide engine: reveal.js, Copyright (C) 2013 Hakim El Hattab</li>
-                    </ul>
-                </section>
+            <section data-state="blackout">
+                <h2>Roadmap</h2>
+            </section>
+
+            <section data-state="blackout">
+                <p>
+                    Questions?<br /><br />
+
+                    <img src="img/Willnotbestopped.gif" alt="Y U NO LOAD"><br /><br />
+
+                    bit.ly/2013-smw<br /><br />
+
+                    Your ideas and support are welcome!
+                </p>
+            </section>
+
+            <section data-state="blackout">
+                <h3>Special:Links</h3>
+                <ul>
+                    <li><a href="http://bit.ly/smw-2013">View slides bit.ly/smw-2013</a></li>
+                    <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
+                    <li><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></li>
+                    <li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></li>
+                </ul>
+            </section>
+
+            <section data-state="blackout">
+                <h3>Special:Attribution</h3>
+                <ul>
+                    <li>Slides: CC BY-SA 3.0, Jeroen De Dauw</li>
+                    <li>Slide engine: reveal.js, Copyright (C) 2013 Hakim El Hattab</li>
+                </ul>
+            </section>
 
 			</div>
 
@@ -308,6 +304,7 @@
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
 					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					// { src: 'plugin/leap/leap.js', async: true }
 					// { src: 'plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } }
 					// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
