--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -48,7 +48,8 @@
                 <h2>Yearly SMW overview</h2>
                 <p>
                     Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                    bit.ly/2013-smw
+                    bit.ly/2013-smw<br /><br />
+                    <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Current_status_and_next_steps_for_SMW">SMWCon Fall 2013, Berlin</a>
                 </p>
             </section>
 
@@ -117,17 +118,17 @@
                     </p>
                 </section>
 
-                <section>
+                <section data-transition="linear">
                     <p>
                         <img src="img/travis.jpeg" alt="Y U NO LOAD">
                     </p>
                 </section>
 
-                <section data-background="img/travis_build.jpeg">
+                <section data-background="img/travis_build.jpeg" data-transition="linear">
                 </section>
             </section>
 
-            <section>
+            <section data-transition="linear">
                 <p>
                     Coveralls.io support
                     <img src="img/coveralls.jpeg" alt="Y U NO LOAD">
@@ -157,11 +158,11 @@
                 </section>
             </section>
 
-            <section data-state="blackout">
+            <section data-state="blackout" data-transition="linear">
                 <h2>SMW 1.8</h2>
             </section>
 
-            <section>
+            <section data-transition="linear">
                 <h3>Compatibility</h3>
                 <ul>
                     <li>Dropped support for MW 1.16</li>
@@ -171,7 +172,7 @@
                 </ul>
             </section>
 
-            <section>
+            <section data-transition="linear">
                 <ul>
                     <li>SQLStore3</li>
                     <li>Special:Ask UI improvements</li>
@@ -181,7 +182,7 @@
                 </ul>
             </section>
 
-            <section>
+            <section data-transition="linear">
                 <section>
                     <h3>Query info now stored</h3>
                     <ul>
@@ -242,11 +243,11 @@
                 <h2>SMW 1.9</h2>
             </section>
 
-            <section data-state="blackout">
+            <section data-state="blackout" data-transition="linear">
                 <h2>Roadmap</h2>
             </section>
 
-            <section data-state="blackout">
+            <section data-state="blackout" data-background="#4d7e65" data-transition="linear" data-background-transition="slide">
                 <p>
                     Questions?<br /><br />
 
@@ -258,7 +259,7 @@
                 </p>
             </section>
 
-            <section data-state="blackout">
+            <section data-state="blackout" data-transition="linear">
                 <h3>Special:Links</h3>
                 <ul>
                     <li><a href="http://bit.ly/smw-2013">View slides bit.ly/smw-2013</a></li>
