--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -165,7 +165,7 @@
             <section data-transition="linear">
                 <h3>Compatibility</h3>
                 <ul>
-                    <li>Dropped support for MW 1.16</li>
+                    <li>Dropped support of MW 1.16</li>
                     <li>Added support for MW 1.19 and 1.20</li>
                     <li class="fragment">Added support for PHP 5.4.x</li>
                     <li class="fragment">Added support for SQLite</li>
@@ -243,11 +243,72 @@
                 <h2>SMW 1.9</h2>
             </section>
 
-            <section data-state="blackout" data-transition="linear">
-                <h2>Roadmap</h2>
+            <section data-transition="linear">
+                <h3>Compatibility</h3>
+                <ul>
+                    <li>Dropped support of MW 1.17 and 1.18</li>
+                    <li>Added support for MW 1.21, 1.22</li>
+                    <li class="fragment">Added support for PHP 5.5.x</li>
+                </ul>
             </section>
 
-            <section data-state="blackout" data-background="#4d7e65" data-transition="linear" data-background-transition="slide">
+            <section data-transition="linear">
+                <h3>When?</h3>
+                <p>
+                    Q4 2013?
+                </p>
+            </section>
+
+            <section data-state="blackout">
+                <h2>Beyond 1.9 (roadmap)</h2>
+            </section>
+
+            <section data-background="#005555" data-transition="linear" data-background-transition="slide">
+                <h2>Some general directions</h2>
+                <ul>
+                    <li class="fragment">Stability, extendability, maintainability and understandability</li>
+                    <li class="fragment">Quality improvements, tests, clear boundaries and interfaces</li>
+                    <li class="fragment">Less dependence on MediaWiki</li>
+                    <li class="fragment">Interoperability and reuse</li>
+                </ul>
+            </section>
+
+            <section data-background="#005566" data-transition="linear" data-background-transition="slide">
+                <h2>Ask library</h2>
+                <ul>
+                    <li>Reimplementation of Ask query language</li>
+                    <li class="fragment"><span style="color:lightblue">Clean standalone PHP library</span></li>
+                    <li class="fragment"><span style="color:lightblue">100% test coverage</span></li>
+                    <li class="fragment"><span style="color:lightblue">Technical documentation</span></li>
+
+                    <li class="fragment"><span style="color:lightgreen">JSON API</span></li>
+                    <li class="fragment"><span style="color:lightgreen">Wikibase interoperability</span></li>
+                    <li class="fragment"><span style="color:lightgreen">Visual query builder?</span></li>
+                    <li class="fragment"><span style="color:lightgreen">...</span></li>
+
+                    <li class="fragment">SMW 1.10?</li>
+                </ul>
+            </section>
+
+            <section data-background="#006655" data-transition="linear" data-background-transition="slide">
+                <h2>DataValues</h2>
+                <ul>
+                    <li>Reimplementation of SMW DataItems</li>
+
+                    <li><span style="color:lightblue">Clean standalone PHP library</span></li>
+                    <li><span style="color:lightblue">(100%) test coverage</span></li>
+                    <li><span style="color:lightblue">(Technical documentation)</span></li>
+
+                    <li class="fragment"><span style="color:lightgreen">JSON API</span></li>
+                    <li class="fragment"><span style="color:lightgreen">Interoperability with Wikibase & others</span></li>
+                    <li class="fragment"><span style="color:lightgreen">UI editing widgets</span></li>
+                    <li class="fragment"><span style="color:lightgreen">...</span></li>
+
+                    <li class="fragment">SMW 1.10?</li>
+                </ul>
+            </section>
+
+            <section data-background="#4d7e65" data-transition="linear" data-background-transition="slide">
                 <p>
                     Questions?<br /><br />
 
