Add to compat notes

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -165,10 +165,10 @@
             <section data-transition="linear">
                 <h3>Compatibility</h3>
                 <ul>
-                    <li>Dropped support of MW 1.16</li>
-                    <li>Added support for MW 1.19 and 1.20</li>
-                    <li class="fragment">Added support for PHP 5.4.x</li>
-                    <li class="fragment">Added support for SQLite</li>
+                    <li><span style="color:#ffcccc">Dropped support of MW 1.16</span></li>
+                    <li><span style="color:lightgreen">Added support for MW 1.19 and 1.20</span></li>
+                    <li class="fragment"><span style="color:lightgreen">Added support for PHP 5.4.x</span></li>
+                    <li class="fragment"><span style="color:lightgreen">Added support for SQLite</span></li>
                 </ul>
             </section>
 
@@ -246,9 +246,11 @@
             <section data-transition="linear">
                 <h3>Compatibility</h3>
                 <ul>
-                    <li>Dropped support of MW 1.17 and 1.18</li>
-                    <li>Added support for MW 1.21, 1.22</li>
-                    <li class="fragment">Added support for PHP 5.5.x</li>
+                    <li><span style="color:#ffcccc">Dropped support of MW 1.17 and 1.18</span></li>
+                    <li><span style="color:lightgreen">Added support for MW 1.21, 1.22</span></li>
+                    <li class="fragment"><span style="color:#ffcccc">Drop support for SQLStore2</span></li>
+                    <li class="fragment"><span style="color:#ffcccc">Drop support for PHP 5.2.x</span></li>
+                    <li class="fragment"><span style="color:lightgreen">Added support for PHP 5.5.x</span></li>
                 </ul>
             </section>
 
