Add about me slide

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -54,6 +54,17 @@
             </section>
 
             <section>
+                <h3>About me</h3>
+                <ul>
+                    <li>(S)MW dev since 2009</li>
+                    <li class="fragment">Working for WMDE on Wikidata</li>
+                    <li class="fragment">Domain layer guy</li>
+                    <li class="fragment">Software craftsmanship</li>
+                    <li class="fragment">Passion for interoperability and reuse</li>
+                </ul>
+            </section>
+
+            <section>
                 <h3>Overview</h3>
                 <ul>
                     <li>Development</li>
