--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -61,6 +61,7 @@
                     <li class="fragment">Domain layer guy</li>
                     <li class="fragment">Software craftsmanship</li>
                     <li class="fragment">Passion for interoperability and reuse</li>
+                    <li class="fragment"><span style="color:#aaaaaa">Lolcats!</span></li>
                 </ul>
             </section>
 
