Added more stub

--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -37,7 +37,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
             <section>
-                <h2>Yearly LolCats overview</h2>
+                <h2>Clean functions</h2>
                 <p>
                     Caturday will not be stopped!<br />
                     <img src="img/cat.gif" alt="Y U NO LOAD">
@@ -45,23 +45,30 @@
             </section>
 
             <section>
-                <h2>Yearly SMW overview</h2>
+                <h2>Clean functions</h2>
                 <p>
                     Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                    bit.ly/2013-smw<br /><br />
-                    <a href="https://semantic-mediawiki.org/wiki/SMWCon_Fall_2013/Current_status_and_next_steps_for_SMW">SMWCon Fall 2013, Berlin</a>
+                    bit.ly/clean-functions
                 </p>
             </section>
 
+            <section data-state="blackout" data-transition="linear">
+                <h2>Function structure</h2>
+            </section>
+
+            <section>
+                <h3></h3>
+                <p>
+                    
+                </p>
+            </section>
 
 
             <section data-state="blackout" data-transition="linear">
                 <h3>Special:Links</h3>
                 <ul>
-                    <li><a href="http://bit.ly/smw-2013">View slides bit.ly/smw-2013</a></li>
+                    <li><a href="http://bit.ly/clean-functions">View slides clean-functions</a></li>
                     <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
-                    <li><a href="https://semantic-mediawiki.org">semantic-mediawiki.org</a></li>
-                    <li><a href="https://twitter.com/#!/SemanticMW">@SemanticMW on Twitter</a></li>
                 </ul>
             </section>
 
