Work on clean functions slides

--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -36,49 +36,179 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-            <section>
-                <h2>Clean functions</h2>
-                <p>
-                    Caturday will not be stopped!<br />
-                    <img src="img/cat.gif" alt="Y U NO LOAD">
-                </p>
-            </section>
+                <section>
+                    <h2>Clean functions</h2>
+                    <p>
+                        Caturday will not be stopped!<br />
+                        <img src="img/cat.gif" alt="Y U NO LOAD">
+                    </p>
+                </section>
 
-            <section>
-                <h2>Clean functions</h2>
-                <p>
-                    Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
-                    bit.ly/clean-functions
-                </p>
-            </section>
+                <section>
+                    <h2>Clean functions</h2>
+                    <p>
+                        Presentation by <a href="https://twitter.com/JeroenDeDauw">@JeroenDeDauw</a><br /><br />
+                        bit.ly/clean-functions
+                    </p>
+                </section>
 
-            <section data-state="blackout" data-transition="linear">
-                <h2>Function structure</h2>
-            </section>
+                <section>
+                    <h3>How big should a function be?</h3>
+                    <ol>
+                        <li class="fragment">It should be SMALL</li>
+                        <li class="fragment">It should be SMALLER then that</li>
+                    </ol>
+                </section>
 
-            <section>
-                <h3></h3>
-                <p>
-                    
-                </p>
-            </section>
+                <section>
+                    <p>4 - 5 lines</p>
+                </section>
+
+                <section>
+                    <p>
+                        How much indenting / nesting?
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        Name length rule
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        Predicates of if and while statements
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        Function names start with verbs or "is"
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        Well written prose
+                    </p>
+                </section>
+
+                <section>
+                    <h3>Big functions</h3>
+                    <ul>
+                        <li>Have multiple functional areas</li>
+                        <li class="fragment">Functions define scopes</li>
+                        <li class="fragment">Have variables used throughout</li>
+                        <li class="fragment">That is what classes are for</li>
+                        <li class="fragment">Group of functions that use a common set of variables</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Panic! Lots of small functions!</h3>
+                    <ul>
+                        <li class="fragment">Function call overhead</li>
+                        <li class="fragment">Long time to write all those functions</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Silly!</h3>
+                    <p>
+                        Well named methods, classes and namespaces act like signposts
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        So what makes small functions unsettling?
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        The landscape metaphor
+                    </p>
+                </section>
+
+                <section>
+                    <p>
+                        Long functions are familiar.
+                        Like landscapes, we recognize the landmarks
+                    </p>
+                </section>
+
+                <section>
+                    <h3>New people</h3>
+                    <ul>
+                        <li class="fragment">Do not recognize anything</li>
+                        <li class="fragment">Can only star wandering around aimlessly</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>New people + signposts</h3>
+                    <ul>
+                        <li>Establish themselves quickly</li>
+                        <li>Start being productive fast</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>The bedroom metaphor</h3>
+                    <ul>
+                        <li class="fragment">Everything lying around at some place well known to you</li>
+                        <li class="fragment">Mom gets upset and forces you to clean room</li>
+                        <li class="fragment">You rebel and put things back</li>
+                        <li class="fragment">Part of growing up is realizing this does not work in teams</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <h3>Call time overhead</h3>
+                    <ul>
+                        <li class="fragment">Nanosecond</li>
+                        <li class="fragment">Compilers are good at optimizing</li>
+                        <li class="fragment">Time better spend on real performance issues</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <blockquote>
+                        Sorry this message is so long,<br />
+                        I had no time to shorten it
+                    </blockquote>
+
+                    <br />
+
+                    <ul>
+                        <li class="fragment">Takes time and effort</li>
+                        <li class="fragment">Places burden of breaking down on ALL readers</li>
+                        <li class="fragment">You are a reader as well</li>
+                    </ul>
+                </section>
+
+                <section data-state="blackout" data-transition="linear">
+                    <h2>Overview</h2>
+                </section>
 
 
-            <section data-state="blackout" data-transition="linear">
-                <h3>Special:Links</h3>
-                <ul>
-                    <li><a href="http://bit.ly/clean-functions">View slides clean-functions</a></li>
-                    <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
-                </ul>
-            </section>
+                <section data-state="blackout" data-transition="linear">
+                    <h3>Special:Links</h3>
+                    <ul>
+                        <li><a href="http://bit.ly/clean-functions">View slides clean-functions</a></li>
+                        <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
+                    </ul>
+                </section>
 
-            <section data-state="blackout">
-                <h3>Special:Attribution</h3>
-                <ul>
-                    <li>Slides: CC BY-SA 3.0, Jeroen De Dauw</li>
-                    <li>Slide engine: reveal.js, Copyright (C) 2013 Hakim El Hattab</li>
-                </ul>
-            </section>
+                <section data-state="blackout">
+                    <h3>Special:Attribution</h3>
+                    <ul>
+                        <li>Slides: CC BY-SA 3.0, Jeroen De Dauw</li>
+                        <li>Slide engine: reveal.js, Copyright (C) 2013 Hakim El Hattab</li>
+                    </ul>
+                </section>
 
 			</div>
 
