Add SMW 1.9 points provided by MWJames

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -266,6 +266,57 @@
                 </ul>
             </section>
 
+            <section>
+                <p>
+                    Special:Concepts
+                </p>
+            </section>
+
+            <section>
+                <h3>Special:Statistics</h3>
+                <p>
+
+                </p>
+            </section>
+
+            <section>
+                <h3>New "smw-admin" rights for Special:SMWAdmin</h3>
+                <p>
+
+                </p>
+            </section>
+
+            <section>
+                <h3>#set_recurring_event now creates subobjects</h3>
+                <p>
+
+                </p>
+            </section>
+
+            <section>
+                <h3></h3>
+                <p>
+                    Extension of information available via api.php?action=smwinfo
+                </p>
+            </section>
+
+            <section>
+                <h3></h3>
+                <p>
+                    Search form in Special:Properties for user-defined properties
+                </p>
+            </section>
+
+            <section>
+                <h3>Caching improvements</h3>
+                <p>
+                    Caching support for Special:Properties, Special:WantedProperties,
+                    and Special:UnusedProperties.
+
+                    Concept cache display in each individual concept if available
+                </p>
+            </section>
+
             <section data-transition="linear">
                 <h3>When?</h3>
                 <p>
