--- a/craftmanship/functions/index.html
+++ b/craftmanship/functions/index.html
@@ -332,19 +332,28 @@ if ( set( "username", "NyanCat" ) )
 
 
                 <section data-state="blackout" data-transition="linear">
-                    <h3>Special:Links</h3>
+                    <h3>Links</h3>
                     <ul>
-                        <li><a href="http://bit.ly/clean-functions">View slides clean-functions</a></li>
-                        <li><a href="https://github.com/JeroenDeDauw/slides/">Slides on GitHub (source)</a></li>
+                        <li><a href="http://bit.ly/clean-functions">View slides bit.ly/clean-functions</a></li>
+                        <li><a href="https://github.com/JeroenDeDauw/slides/">Slides source on GitHub</a></li>
                     </ul>
                 </section>
 
                 <section data-state="blackout">
-                    <h3>Special:Attribution</h3>
+                    <h3>Attribution</h3>
                     <ul>
-                        <li>Slides: CC BY-SA 3.0, Jeroen De Dauw</li>
-                        <li>Slide engine: reveal.js, Copyright (C) 2013 Hakim El Hattab</li>
+                        <li>Slides: CC BY-SA 3.0, <a href="https://twitter.com/#!/JeroenDeDauw">Jeroen De Dauw</a></li>
+                        <li>Slide engine: <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>, Copyright (C) 2013 Hakim El Hattab</li>
                     </ul>
+                    <small>
+                        <br />
+                        A lot of the material in these slides is based on works by Robert C. Martin.<br />
+                        In particular his book
+                        <a href="http://www.goodreads.com/book/show/3735293-clean-code">Clean Code</a>
+                        , and
+                        <a href="http://www.cleancoders.com/">Clean Coders</a>
+                        video series.
+                    </small>
                 </section>
 
 			</div>
