Add some images

--- a/smwcon/2013fall/yearly/index.html
+++ b/smwcon/2013fall/yearly/index.html
@@ -267,22 +267,32 @@
             </section>
 
             <section>
+                <h3>Special:Concepts</h3>
                 <p>
-                    Special:Concepts
+                    <img src="img/smw-19-special-concepts.png" alt="Special:Concepts">
                 </p>
             </section>
 
             <section>
                 <h3>Special:Statistics</h3>
                 <p>
-
+                    <img src="img/smw-19-special-statistics.png" alt="Special:Statistics">
                 </p>
             </section>
 
             <section>
-                <h3>New "smw-admin" rights for Special:SMWAdmin</h3>
+                <h3>Special:Properties</h3>
                 <p>
+                    Search form for user-defined properties
+                    <img src="img/smw-19-special-properties.png" alt="Special:Properties">
+                </p>
+            </section>
 
+            <section>
+                <h3>Special:SMWAdmin</h3>
+                <p>
+                    New "smw-admin" rights for Special:SMWAdmin
+                    <img src="img/smw-19-special-smwadmin.png" alt="Special:SMWAdmin">
                 </p>
             </section>
 
@@ -294,16 +304,11 @@
             </section>
 
             <section>
-                <h3></h3>
+                <h3>ApiInfo (api.php?action=smwinfo)</h3>
                 <p>
-                    Extension of information available via api.php?action=smwinfo
-                </p>
-            </section>
-
-            <section>
-                <h3></h3>
-                <p>
-                    Search form in Special:Properties for user-defined properties
+                    Extension of available information
+                    <img src="img/smw-19-api-smwinfo-xml.png" alt="ApiInfo">
+                    <img src="img/smw-19-api-smwinfo-json.png" alt="ApiInfo">
                 </p>
             </section>
 
